--- a/portal/package.json
+++ b/portal/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.56.0",
     "bcryptjs": "^3.0.2",
     "next": "15.4.7",
     "next-auth": "^4.24.11",
